--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2693,107 +2693,107 @@ stories:
   domain: http://www.albanyherald.com/
   link: https://www.albanyherald.com/features/arts_entertainment/christoph-waltz-returning-to-james-bond/article_d17f28d4-64c8-5d08-9f01-577095b11c99.html
 images:
-- name: crow-crow-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-hot-spicy.jpg
-- name: aws-s3-lighthouse-lighthouse-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still.jpg
-- name: oldsmallboat-oldsmallboat-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dry-skin.jpg
-- name: bluelake-colorful-dream-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-dream-file-00-01-17-38.jpg
-- name: catacombs-catacombs-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-dresden.jpg
-- name: rockingchair-face-2-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-clean-view.jpg
-- name: white-house-lawn-white-house-lawn-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-kand-two.jpg
-- name: legal-statue-legalstatue-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
-- name: hollywood-building-hollywood-building-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-sand-paper.jpg
-- name: castle-wall-DSC-0067-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit.JPG
-- name: old-church-oldchurch-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-pond.jpg
-- name: udnie-DSC_0007.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0007.jpg
-- name: berlinwall2-berlinwall-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-light-dali.jpg
-- name: birdhouse-birdhouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
-- name: crow_nazi_poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_nazi_poster.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-umberto-bocc.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-umberto-bocc.JPG
-- name: oldhouse-granaryfield-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-post-modern.jpg
-- name: curtain-curtain-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-ww2-color.jpg
-- name: berlinwall-DSC-0084-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-aqua.jpg
-- name: catacombs-catacombs-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-mucha-mult.jpg
-- name: locked-up-steam-lock-up-steam-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-post-modern.jpg
-- name: containership-containership-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-colored-circuits.jpg
-- name: downtown-fredericksburg-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-clean-view.JPG
-- name: old-granary-field-oldhouse-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colored-circuits.jpg
-- name: liberty-back-statue-liberty-back-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-sunday.jpg
-- name: udnie-IMG_8352.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8352.jpg
-- name: old-gas-pumps-oldgaspumps-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-internet-numbers.jpg
-- name: oldtrain-oldtrain-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-crabapple.jpg
-- name: machine-road-machine-road-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purp-paper.jpg
-- name: sand-hand-sand-hand-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-wav-pr.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-alien-goggles.jpg
-- name: meadowbutterfly-meadow-butterfly-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-clean-view.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
-- name: subway-subway-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-ww2-color.jpg
-- name: oldsmallboat-oldsmallboat-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kandinsky-bv.jpg
-- name: border-fence-border-fence-on-hill-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-granite.jpg
-- name: old-door-lock-old-door-lock-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-neo-instinct.jpg
-- name: carry-load-carryload-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-far-away.jpg
-- name: eduardo-eduardo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crafty-painting.jpg
-- name: hollywood-building-hollywood-building-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-jap-wav-pr.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
-- name: windowmountain-window-mountain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-asteroids.jpg
-- name: old-door-lock-old-door-lock-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-spagetti-accident.jpg
-- name: oldhotel-oldhotel-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crunch-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-umberto-bocc.jpg
-- name: store-on-corner-oldcabin-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-nazi-poster.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gan-vogh.jpg
-- name: white-house-lawn-white-house-window-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-cinnamon-rolls.jpg
-- name: art-museum-art-museum-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crabapple.jpg
-- name: crow_blue_granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_granite.jpg
-- name: crow_gan_vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gan_vogh.jpg
+- name: beach-rocks-beach-rocks-currents-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-china-prop.jpg
+- name: school-clouds-church-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+- name: walled-garden-walled-garden-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-mucha-mult.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
+- name: white-house-lawn-white-house-window-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-asteroids.jpg
+- name: white-house-lawn-white-house-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn.jpg
+- name: hollywood-building-hollywood-building-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-pond.jpg
+- name: crow-crow-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-sunday.jpg
+- name: old-gas-pumps-oldgaspumps-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-three.jpg
+- name: rockingchair-face-2-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-granite.jpg
+- name: oldbarn-oldbarn-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-circuit.jpg
+- name: udnie-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4833.jpg
+- name: liberty-back-statue-liberty-back-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-neo-instinct.jpg
+- name: curtain-curtain-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-really-hot.jpg
+- name: stories-new-32-119-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-32-119-800-500-0-max-0--1--1.jpg
+- name: server-cloud1-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-copper-circuit.jpg
+- name: mosaic-face-mosaic-face-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-really-hot.jpg
+- name: status-berlin-status-berlin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-rainbow-festival.jpg
+- name: windowmountain-window-mountain-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-constitution.jpg
+- name: art-museum-art-museum-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-matrix.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+- name: sand-hand-sand-hand-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-gan-vogh.jpg
+- name: power-lines-power-lines-empty-space-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
+- name: oldhouse-oldhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-pond.jpg
+- name: containership-containership-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-horiz-circuit.jpg
+- name: school-clouds-church-clouds-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-pablo-blue.jpg
+- name: docks-docks-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-color.jpg
+- name: san-francisco-street-view-san-francisco-street-view-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-copper-circuit.jpg
+- name: locked-up-steam-lock-up-steam-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-clean-view.jpg
+- name: curtain-curtain-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-dream.jpg
+- name: oldhouse-granaryfield-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-deep-connections.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-copper-circuit.JPG
+- name: old-door-lock-old-door-lock-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-smooth-ride.jpg
+- name: berlinwall2-berlinwall-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-alberto-giacometti.jpg
+- name: aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
+- name: curtain-curtain-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-rainbow-festival.jpg
+- name: yosemite-yosemite-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crafty-painting.jpg
+- name: mistywoods-babyfoot-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-post-modern.jpg
+- name: art-museum-art-museum-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-creativity.jpg
+- name: sand-hand-sand-hand-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-ww2-color.jpg
+- name: oldcabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-missle.jpg
+- name: mosaic-face-mosaic-face-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-clean-view.jpg
+- name: miamibeach-miamibeach-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-brush.jpg
+- name: san-francisco-street-view-san-francisco-street-view-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-atari-asteroids.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-plentiful.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-plentiful.png
+- name: store-on-corner-oldcabin-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-ww2-color.jpg
+- name: dc-statue-dcstatue-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-atari-missle.jpg
+- name: amusement-park-amusement-park-2-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-graham-sutherland.jpg
+- name: stories-new-59-124-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-59-124-800-500-0-max-0--5--5.jpg
+- name: lincoln-memorial-lincolnmemorial-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-storm.jpg
 ---
 Faith Leaders Invited To Tackle Issue Of White Privilege.&nbsp;Wayne County High School Graduation.&nbsp;Tips To Build Good Credit During And After College.&nbsp;Which Question Interests You The Most?.&nbsp;Passengers Violently Ejected From Seats On Turbulent Flight.&nbsp;Trump Expected To Back Away From Census Question.&nbsp;New Orleans' Levees Face A Hard Test As Storm Bears Down.&nbsp;Why Governments Around The World Are Afraid Of Libra, Facebook's Cryptocurrency.&nbsp;
